refactor: Task-TaskResult 관계 변경 반영
