# src/modules/ai/performance/dto/api/performance.request.dto.ts
@@ -2,10 +2,10 @@ import { Example } from "tsoa";
 import { TaskPriority } from "../../../../tasks/task.dto";
 import { JobRole } from "../../../../users/users.dto";
 export class PerformanceRequestDto {
-  
-  @Example("daily-entry-550e8400")
-  dailyEntryId!: string;
 
+  @Example("f3a1e4c2-31b5-46f4-b134-a0e238a1ad01")
+  userId!: string;
+  
   tasks!: TaskDto[];
 
   @Example("오늘 Swagger 문서를 작성하고 API 예시를 추가했다.")
@@ -19,11 +19,8 @@ export class PerformanceRequestDto {
 
 export class TaskDto {
 
-  @Example("task-550e8400")
+  @Example("f3a1e4c2-31b5-46f4-b134-a0e238a1ad01")
   taskId!: string;
-
-  @Example("task-result-550e8400")
-  taskResultId?: string;
 
   @Example("SHOULD_DO")
   priority!: TaskPriority;
@@ -37,13 +34,21 @@ export class TaskDto {
   @Example("Request/Response 예시 추가")
   memo?: string;
 
+  taskResult!: TaskResultDto;
+}
+
+export class TaskResultDto {
+
+  @Example("f3a1e4c2-31b5-46f4-b134-a0e238a1ad01")
+  taskResultId?: string;
+
   @Example("Swagger 문서를 모두 작성했다.")
-  result?: string;
+  result!: string;
 }
 
 export class ProjectTagDto {
 
-  @Example("project-tag-01")
+  @Example("f3a1e4c2-31b5-46f4-b134-a0e238a1ad01")
   projectTagId!: string;
 
   @Example("AI 기능")
